# bot542

./: .dockerignore  .env.example  .replit  DEPLOYMENT.md  Procfile  README.md  build.sh  command_patches.py  deploy.json  deploy_cleanup.sh  deploy_config.py  deployment_instructions.md  integrated_bot.py  main.py  main_deploy.py  pyproject.toml  render.yaml  replit.md  requirements.txt  requirements_deploy.txt  service_wrappers.py  simple_telegram_bot.py  simplified_main.py  start.sh  telegram_handler.py  test_telegram_import.py  uv.lock.bak  working_telegram_bot.py
deploy/: advanced_bot.py  command_patches.py  gunicorn_config.py  render.yaml  simplified_telegram_handler.py  telegram_handler.py
