[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "cachetools>=6.1.0",
    "cryptography>=45.0.5",
    "openai>=1.97.1",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[all]>=22.3",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "telegram>=0.0.1",
]
